make `lookupUsers` throwable